Final fix for aspect ratio on mobile?

--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,4 +1,4 @@
-#unity-container { margin:auto; width: 480px; height: 352px; padding-top: 20px; }
+#unity-container { margin:auto; width: 480px; aspect-ratio:480/352; padding-top: 20px; }
 #unity-canvas { width: 100%; height:100%; background: #231F20; }
 #unity-loading-bar { position: absolute; left: 50%; top: 160px; transform: translate(-50%, 0%);}
 #unity-logo { width: 154px; height: 130px; background: url('unity-logo-dark.png') no-repeat center }
@@ -26,7 +26,7 @@
 #twitter-timeline { margin:auto; width:480px; height:540px; padding-top: 10px; }
 
 @media only screen and (max-width: 768px) {
-    #unity-container { margin:auto; width:100%; height:73.33%;}
+    #unity-container { margin:auto; width:100%; }
     #twitter-timeline { margin:auto; width:auto; height:auto; }
     #roadmap-button { margin-right:auto; margin-left:auto; width:100%; height:100%; }
 }
